refactor: fix bugs, changes

--- a/react-graphql-basic/web-spa/src/index.css
+++ b/react-graphql-basic/web-spa/src/index.css
@@ -1,12 +1,147 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
 
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  align-items: center;
+}
 .title {
-  font-size: medium;
+  font-size: 2em;
+  margin: 20px;
+  padding: 5px;
   color: orangered;
   font-weight: bold;
   font-variant-ligatures: normal;
 }
 body {
   background-color: rgb(253, 235, 213);
-  font-family: 'Fira Code', monospace, sans-serif;
+  font-family: "Fira Code", monospace, sans-serif;
+}
+.book__list {
+  max-width: 500px;
+  width: 450px;
+}
+.lists {
+  width: 100%;
+}
+.list__items {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  font-weight: bold;
+  font-size: 15px;
+  text-decoration: none;
+  width: 100%;
+}
+.books {
+  margin: 10px;
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  -moz-box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  -webkit-box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+.title__book {
+  font-size: 18px;
+  text-align: center;
+  padding: 5px;
+  font-weight: 500;
+  border-bottom: 2px solid #2d3436;
+}
+.name__book {
+  padding-top: 15px;
+}
+.detail__btn {
+  appearance: none;
+  -webkit-appearance: none;
+  margin-top: 15px;
+  padding: 10px;
+  border: none;
+  background-color: #27ae60;
+  color: #fff;
+  font-weight: 600;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+}
+.detail__btn:hover {
+  background-color: #2ecc71;
+}
+.form__style {
+  max-width: 500px;
+  padding: 20px 12px 10px 20px;
+  font: 13px Arial, Helvetica, sans-serif;
+}
+.form__head {
+  font-weight: bold;
+
+  border-bottom: 2px solid #2d3436;
+  margin-bottom: 20px;
+  font-size: 15px;
+  padding-bottom: 3px;
+}
+label {
+}
+input,
+select {
+  height: 4vh;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+}
+input[type="text"] {
+  padding: 10px;
+  margin: 10px 0;
+  padding: 10px;
+  border: 0;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+.field {
+  padding: 5px;
+  border-radius: 15px;
+}
+select {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  border: 0;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  -moz-box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  -webkit-box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+
+  outline: none;
+}
+input[type="text"]:focus {
+  background-color: #fdcb6e;
+  border: 0;
+  outline: none;
+}
+.btn__add {
+  /* remove default behavior */
+  appearance: none;
+  -webkit-appearance: none;
+
+  /* usual styles */
+  margin-top: 15px;
+  padding: 10px;
+  border: none;
+  background-color: #3f51b5;
+  color: #fff;
+  font-weight: 600;
+  border-radius: 5px;
+  width: 100%;
+  cursor: pointer;
 }
